code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_18.wast
(assert_invalid
  (module (func $type-value-i64-vs-void
    (block (i64.const 1))
  ))
  "type mismatch"
)